// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarSection Component SideBarSection renders 1`] = `
<div>
  <nav
    class="gds-sidebar-container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar"
      style="width: 270px; left: 0px;"
    >
      <div
        class="sidebar-divider"
      />
      <div
        class="section"
      >
        LABEL
      </div>
      <li
        class="item"
      >
        <a
          class=""
          href="/link1"
        >
          full url
          <div
            class="label"
          >
            LINK1
          </div>
        </a>
      </li>
      <li
        class="item"
      >
        <a
          class=""
          href="/link2"
        >
          full url
          <div
            class="label"
          >
            LINK2
          </div>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`SideBarSection Component SideBarSection renders hidden section 1`] = `
<div>
  <nav
    class="gds-sidebar-container"
    style="height: 600px; width: 270px;"
  >
    <ul
      class="sidebar"
      style="width: 270px; left: 0px;"
    />
  </nav>
</div>
`;
